objects/Tradeshow__c.object
<CustomObject>
    <description>Tradeshow attributes</description>
    <fields>
        <fullName>Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Set if want to link Lead or Opportunity for this show need to be linked to a Campaign for reporting purposes</inlineHelpText>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Tradeshows</relationshipLabel>
        <relationshipName>Tradeshows</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Guarantee_Uniqueness__c</fullName>
        <inlineHelpText>Field to put a unique constraint on....Trigger will try to write new name into this field and if not unique, it should error out and prevent the save.</inlineHelpText>
        <label>Guarantee Uniqueness</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Lead_Opp_Creation_Status__c</fullName>
        <inlineHelpText>Status the Lead or Opportunity should be opened with</inlineHelpText>
        <label>Lead-Opp Creation Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Yet Contacted By Rep</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rep Attempted Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Frst Appointment Set</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0. Undiscovered</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1. Discover the Hurt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2. Qualify the Hurt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3. Amplify the Hurt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4. Propose a Solution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5. Buy In</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6. Solution Details</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7. Tailor the Solution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8. Confirm Commitment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9. Formal Contracting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Plan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recognize</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Search</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Evaluate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Select</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commit</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lead_Opp_Owner_Source__c</fullName>
        <label>Lead-Opp Owner Source</label>
        <picklist>
            <picklistValues>
                <fullName>KEY_REP__C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DESIGNATED_DSM__C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DESIGNATED_DSM_NAT_ENT__C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TECHNOLOGY_SOLUTIONS_MANAGER__C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DEALIX_SOLUTIONS_REP__C</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lead_Record_Type__c</fullName>
        <inlineHelpText>Set if want to create Leads from this Tradeshow (survey).</inlineHelpText>
        <label>Lead Record Type</label>
        <picklist>
            <picklistValues>
                <fullName>NADA FY14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rep Created</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inside Sales Created</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NADA FY15</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lead_Source_Value__c</fullName>
        <inlineHelpText>DS (Lead/Opp) Trade Show - NADA
Digital (Opp only) NADA</inlineHelpText>
        <label>Lead Source Value</label>
        <picklist>
            <picklistValues>
                <fullName>Trade Show - NADA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NADA</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Opportunity_Close_Date__c</fullName>
        <inlineHelpText>Days from Opportunity creation to set Close Date.</inlineHelpText>
        <label>Opportunity Close Date</label>
        <picklist>
            <picklistValues>
                <fullName>30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>60</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>90</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>120</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Opportunity_Lead_Source_Field__c</fullName>
        <inlineHelpText>DS = LeadSource, Digital = Internal_Lead_Source__c</inlineHelpText>
        <label>Opportunity Lead Source Field</label>
        <picklist>
            <picklistValues>
                <fullName>LeadSource</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internal_Lead_Source__c</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Opportunity_Record_Type__c</fullName>
        <inlineHelpText>Set if you want to create Opportunities from this Tradeshow (survey)</inlineHelpText>
        <label>Opportunity Record Type</label>
        <picklist>
            <picklistValues>
                <fullName>Pipeline</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1 - Baseline Multi-channel Opportunity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 - Network Solutions Opportunity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5 - Inside Sales Opportunity</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Party_Tickets_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Party Tickets - No Matching required</inlineHelpText>
        <label>Party Tickets Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Target_Market__c</fullName>
        <label>Target Market</label>
        <picklist>
            <picklistValues>
                <fullName>Auto</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Truck</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cobalt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealix</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PFW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Telephony</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NIADA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Powersports</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type_Of_Marketing_Interaction__c</fullName>
        <label>Type Of Marketing Interaction</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Tradeshow</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Target_Market__c</columns>
        <columns>Campaign__c</columns>
        <columns>Lead_Opp_Owner_Source__c</columns>
        <columns>Lead_Record_Type__c</columns>
        <columns>Opportunity_Record_Type__c</columns>
        <columns>Party_Tickets_Only__c</columns>
        <columns>Lead_Opp_Creation_Status__c</columns>
        <columns>Lead_Source_Value__c</columns>
        <columns>Opportunity_Close_Date__c</columns>
        <columns>Opportunity_Lead_Source_Field__c</columns>
        <columns>Type_Of_Marketing_Interaction__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>FY15</fullName>
        <columns>NAME</columns>
        <columns>Target_Market__c</columns>
        <columns>Campaign__c</columns>
        <columns>Lead_Opp_Owner_Source__c</columns>
        <columns>Lead_Record_Type__c</columns>
        <columns>Opportunity_Record_Type__c</columns>
        <columns>Party_Tickets_Only__c</columns>
        <columns>Lead_Opp_Creation_Status__c</columns>
        <columns>Lead_Source_Value__c</columns>
        <columns>Opportunity_Close_Date__c</columns>
        <columns>Opportunity_Lead_Source_Field__c</columns>
        <columns>Type_Of_Marketing_Interaction__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>FY15</value>
        </filters>
        <label>FY15</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Tradeshow Show Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tradeshows</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>DS_Tradeshow_CloseDate_Reqd_For_Ops</fullName>
        <active>true</active>
        <description>If Opportunity_Record_Type is set, require Opportunity Close Date value.</description>
        <errorConditionFormula>NOT(ISBLANK(TEXT(Opportunity_Record_Type__c))) &amp;&amp;
ISBLANK(TEXT(Opportunity_Close_Date__c))</errorConditionFormula>
        <errorDisplayField>Opportunity_Close_Date__c</errorDisplayField>
        <errorMessage>If Opportunity Record Type is set, Opportunity Close Date must be set.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>DS_Tradeshow_Lead_Opp_Not_Both_Set</fullName>
        <active>true</active>
        <description>Ensure Lead Record Type and Opportunity Record Type are not set for a single record.</description>
        <errorConditionFormula>NOT(ISBLANK(TEXT(Lead_Record_Type__c))) &amp;&amp; 
NOT(ISBLANK(TEXT(Opportunity_Record_Type__c)))</errorConditionFormula>
        <errorDisplayField>Opportunity_Record_Type__c</errorDisplayField>
        <errorMessage>Both Lead Record Type and Opportunity Record Type cannot be set for a single record.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>DS_Tradeshow_Lead_Opp_Set_If_RecType_Set</fullName>
        <active>true</active>
        <description>Ensure Lead-Opp Owner Source is defined if either Lead Rec Type or Opp Rec Type are set OR ensure Lead Rec Type or Opp Rec Type are set if Lead-Opp Owner Source is set.</description>
        <errorConditionFormula>((NOT(ISBLANK(TEXT(Lead_Record_Type__c))) || 
NOT(ISBLANK(TEXT(Opportunity_Record_Type__c))) 
) &amp;&amp; 
ISBLANK(TEXT(Lead_Opp_Owner_Source__c)) 
) 
|| 
(ISBLANK(TEXT(Lead_Record_Type__c)) &amp;&amp; 
ISBLANK(TEXT(Opportunity_Record_Type__c)) &amp;&amp; 
NOT(ISBLANK(TEXT(Lead_Opp_Owner_Source__c))) 
)</errorConditionFormula>
        <errorDisplayField>Lead_Opp_Owner_Source__c</errorDisplayField>
        <errorMessage>Lead-Opp Owner Source needs to be defined if either Lead Record Type or Opportunity Record Type are set OR set Lead Record Type or Opportunity Record Type are set if Lead-Opp Owner Source is set.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>DS_Tradeshow_NewLead_Lead_Src_Needed</fullName>
        <active>true</active>
        <description>If Lead Record Type is set, ensure Lead Source Value is set.</description>
        <errorConditionFormula>NOT(ISBLANK(TEXT( Lead_Record_Type__c ))) &amp;&amp; 
(ISBLANK(TEXT( Lead_Source_Value__c )))</errorConditionFormula>
        <errorDisplayField>Lead_Source_Value__c</errorDisplayField>
        <errorMessage>Lead Source Value must be set if setting Lead Record Type is set.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>DS_Tradeshow_OppLead_Status_Reqd</fullName>
        <active>true</active>
        <description>If Opportunity Record Type or Lead Record Type is set, require Opp-Lead Status to have a value.</description>
        <errorConditionFormula>(NOT(ISBLANK(TEXT(Opportunity_Record_Type__c))) ||
 NOT(ISBLANK(TEXT(Lead_Record_Type__c))) 
) &amp;&amp; 
ISBLANK(TEXT(Lead_Opp_Creation_Status__c))</errorConditionFormula>
        <errorDisplayField>Lead_Opp_Creation_Status__c</errorDisplayField>
        <errorMessage>If Opportunity or Lead Record Type is set, Opp-Lead Status must be set.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>DS_Tradeshow_Opp_Lead_Src_Set_Ld_Src</fullName>
        <active>true</active>
        <description>If Opportunity Lead Source Field is set, ensure Lead Source Value is set.</description>
        <errorConditionFormula>NOT(ISBLANK(TEXT( Opportunity_Lead_Source_Field__c ))) &amp;&amp; 
(ISBLANK(TEXT( Lead_Source_Value__c )))</errorConditionFormula>
        <errorDisplayField>Lead_Source_Value__c</errorDisplayField>
        <errorMessage>Lead Source Value must be set if setting Opportunity Lead Source Field.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>DS_Tradeshow_Party_Tix_No_Other_Fields</fullName>
        <active>true</active>
        <description>If Party Tickets checked, then ensure Lead-Opp Owner Source, Lead Rec Type, and Opp Rec Type are not set.</description>
        <errorConditionFormula>(NOT(ISBLANK(TEXT(Lead_Record_Type__c))) || 
NOT(ISBLANK(TEXT(Opportunity_Record_Type__c))) || 
NOT(ISBLANK(TEXT(Lead_Opp_Owner_Source__c))) 
) &amp;&amp; Party_Tickets_Only__c = True</errorConditionFormula>
        <errorMessage>If Party Tickets Only is checked, then Lead Record Type, Opportunity Record Type, and Lead-Opp Owner Source should not be set.</errorMessage>
    </validationRules>
</CustomObject>